Make use of List.getFirst() method